fix form view on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -662,7 +662,7 @@ button {
     width: 80%;
   }
 
-  form div {
+  form fieldset {
     width: 100%;
   }
 }
